Bug 434393 - Exif GPS metadata lost
Summary: Exif GPS metadata lost
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.4.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-14 13:23 UTC by Sadi
Modified: 2021-08-16 14:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a sample jpeg file with GPS metada (158.14 KB, image/jpeg)
2021-03-14 13:43 UTC, Sadi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sadi 2021-03-14 13:23:41 UTC
SUMMARY
Editing and saving an image with EXIF GPS metadata (e.g. GPS Position, GPS Latitude, GPS Longitude etc.) in Krita results in the loss of such data while other EXIF metadata in the image file (e.g. Date/Time Original, Modify Date etc.) are preserved.  

STEPS TO REPRODUCE
1. Open an image file that contains such EXIF metadata, edit and save it in Krita.
2. Check the EXIF metadata - GPS data in particular - contained in the image file.

OBSERVED RESULT
Krita removes all GPS metadata.

EXPECTED RESULT
All EXIF (and other) metadata in image files edited by Krita should be preserved upon saving it either with the same or another name. 

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 20.10
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Comment 1 Halla Rempt 2021-03-14 13:27:36 UTC
* please provide such a file so we can try to reproduce.
* which file format do you use to save in?
Comment 2 Sadi 2021-03-14 13:37:09 UTC
(In reply to Halla Rempt from comment #1)
Any jpg file with gps data...
Comment 3 Halla Rempt 2021-03-14 13:39:45 UTC
So, provide one, because I don't have any jpg file with gps data _and_ answer my question.
Comment 4 Sadi 2021-03-14 13:43:18 UTC
Created attachment 136664 [details]
a sample jpeg file with GPS metada
Comment 5 Sadi 2021-03-14 13:45:20 UTC
(In reply to Halla Rempt from comment #3)

Opening any jpg file with EXIF GPS metadata, editing and then saving it in the same jpg format with the same or different name results in the loss of GPS info.
Comment 6 Bug Janitor Service 2021-03-15 04:33:43 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 7 amyspark 2021-08-10 01:17:18 UTC
Confirming. Our code does not parse Exif.GPSInfo structure at all, so it gets lost on import.
Comment 8 Bug Janitor Service 2021-08-14 21:33:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1000
Comment 9 Halla Rempt 2021-08-16 14:05:25 UTC
Git commit 9c59a7a05167c671e1171bdb163562f6e8742586 by Halla Rempt, on behalf of L. E. Segovia.
Committed on 16/08/2021 at 13:41.
Pushed by rempt into branch 'master'.

kisexiv2: support GPSInfo Exif structure

M  +3    -1    libs/ui/kisexiv2/kis_exif_io.cpp
M  +40   -11   libs/ui/kisexiv2/kis_exiv2.cpp

https://invent.kde.org/graphics/krita/commit/9c59a7a05167c671e1171bdb163562f6e8742586