kisexiv2: support GPSInfo Exif structure

BUG: 434393